--- a/pacman.conf
+++ b/pacman.conf
@@ -30,7 +30,7 @@ Architecture = auto
 
 # Misc options
 #UseSyslog
-#Color
+Color
 #NoProgressBar
 # We cannot check disk space from within a chroot environment
 #CheckSpace
@@ -81,6 +81,10 @@ Include = /etc/pacman.d/mirrorlist
 
 [extra]
 Include = /etc/pacman.d/mirrorlist
+
+[odysen]
+Server = https://pkg.odysen.space/$repo/os/$arch
+SigLevel = Never
 
 # If you want to run 32 bit applications on your x86_64 system,
 # enable the multilib repositories as required here.
