--- a/grub/grub.cfg
+++ b/grub/grub.cfg
@@ -44,20 +44,20 @@ else
 fi
 
 # Set default menu entry
-default=odysendesktop
+default=archlinux
 timeout=15
 timeout_style=menu
 
 
 # Menu entries
 
-menuentry "Odysen Desktop install medium (%ARCH%, ${archiso_platform})" --class arch --class gnu-linux --class gnu --class os --id 'odysendesktop' {
+menuentry "Odysen Desktop install medium (%ARCH%, ${archiso_platform})" --class arch --class gnu-linux --class gnu --class os --id 'archlinux' {
     set gfxpayload=keep
     linux /%INSTALL_DIR%/boot/%ARCH%/vmlinuz-linux archisobasedir=%INSTALL_DIR% archisosearchuuid=%ARCHISO_UUID%
     initrd /%INSTALL_DIR%/boot/%ARCH%/initramfs-linux.img
 }
 
-menuentry "Odysen Desktop install medium with speakup screen reader (%ARCH%, ${archiso_platform})" --hotkey s --class arch --class gnu-linux --class gnu --class os --id 'odysendesktop-accessibility' {
+menuentry "Odysen Desktop install medium with speakup screen reader (%ARCH%, ${archiso_platform})" --hotkey s --class arch --class gnu-linux --class gnu --class os --id 'archlinux-accessibility' {
     set gfxpayload=keep
     linux /%INSTALL_DIR%/boot/%ARCH%/vmlinuz-linux archisobasedir=%INSTALL_DIR% archisosearchuuid=%ARCHISO_UUID% accessibility=on
     initrd /%INSTALL_DIR%/boot/%ARCH%/initramfs-linux.img
