--- a/grub/loopback.cfg
+++ b/grub/loopback.cfg
@@ -21,20 +21,20 @@ else
 fi
 
 # Set default menu entry
-default=odysendesktop
+default=archlinux
 timeout=15
 timeout_style=menu
 
 
 # Menu entries
 
-menuentry "Odysen Desktop install medium (%ARCH%, ${archiso_platform})" --class arch --class gnu-linux --class gnu --class os --id 'odysendesktop' {
+menuentry "Odysen Desktop install medium (%ARCH%, ${archiso_platform})" --class arch --class gnu-linux --class gnu --class os --id 'archlinux' {
     set gfxpayload=keep
     linux /%INSTALL_DIR%/boot/%ARCH%/vmlinuz-linux archisobasedir=%INSTALL_DIR% img_dev=UUID=${archiso_img_dev_uuid} img_loop="${iso_path}"
     initrd /%INSTALL_DIR%/boot/%ARCH%/initramfs-linux.img
 }
 
-menuentry "Odysen Desktop install medium with speakup screen reader (%ARCH%, ${archiso_platform})" --hotkey s --class arch --class gnu-linux --class gnu --class os --id 'odysendesktop-accessibility' {
+menuentry "Odysen Desktop install medium with speakup screen reader (%ARCH%, ${archiso_platform})" --hotkey s --class arch --class gnu-linux --class gnu --class os --id 'archlinux-accessibility' {
     set gfxpayload=keep
     linux /%INSTALL_DIR%/boot/%ARCH%/vmlinuz-linux archisobasedir=%INSTALL_DIR% img_dev=UUID=${archiso_img_dev_uuid} img_loop="${iso_path}" accessibility=on
     initrd /%INSTALL_DIR%/boot/%ARCH%/initramfs-linux.img
