feat: change push conditions

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,6 +1,9 @@
 name: Build an ISO
 
-on: [push, pull_request]
+on:
+    push:
+        branches: [ "main" ]
+    workflow_dispatch:
 
 env:
     TOKEN: ${{ secrets.CONSTELLATION_TOKEN }}
