--- a/pacman.conf
+++ b/pacman.conf
@@ -86,6 +86,10 @@ Include = /etc/pacman.d/mirrorlist
 Server = https://pkg.odysen.space/$repo/os/$arch
 SigLevel = Never
 
+[odysen-devtools]
+Server = https://pkg.odysen.space/$repo/os/$arch
+SigLevel = Never
+
 # If you want to run 32 bit applications on your x86_64 system,
 # enable the multilib repositories as required here.
 
