--- a/airootfs/etc/pacman.conf
+++ b/airootfs/etc/pacman.conf
@@ -30,12 +30,13 @@ Architecture = auto
 
 # Misc options
 #UseSyslog
-Color
+#Color
 #NoProgressBar
-# We cannot check disk space from within a chroot environment
-#CheckSpace
+CheckSpace
 #VerbosePkgLists
-ParallelDownloads = 5
+#ParallelDownloads = 5
+DownloadUser = alpm
+#DisableSandbox
 
 # By default, pacman accepts packages signed by keys that its local keyring
 # trusts (see pacman-key and its man page), as well as unsigned packages.
@@ -77,6 +78,10 @@ LocalFileSigLevel = Optional
 Server = https://pkg.odysen.space/$repo/os/$arch
 SigLevel = Never
 
+[odysen-calamares]
+Server = https://xmb9.github.io/$repo/$repo/os/$arch
+SigLevel = Never
+
 [core]
 Include = /etc/pacman.d/mirrorlist
 
@@ -85,6 +90,10 @@ Include = /etc/pacman.d/mirrorlist
 
 [extra]
 Include = /etc/pacman.d/mirrorlist
+
+[odysen-devtools]
+Server = https://pkg.odysen.space/$repo/os/$arch
+SigLevel = Never
 
 # If you want to run 32 bit applications on your x86_64 system,
 # enable the multilib repositories as required here.
