--- a/pacman.conf
+++ b/pacman.conf
@@ -78,6 +78,14 @@ LocalFileSigLevel = Optional
 Server = https://pkg.odysen.space/$repo/os/$arch
 SigLevel = Never
 
+[odysen-calamares]
+Server = https://xmb9.github.io/$repo/$repo/os/$arch
+SigLevel = Never
+
+[chaotic-aur]
+Server = https://cdn-mirror.chaotic.cx/$repo/$arch
+SigLevel = Never
+
 [core]
 Include = /etc/pacman.d/mirrorlist
 
