chore: fix pacman.conf oddities

--- a/airootfs/etc/pacman.conf
+++ b/airootfs/etc/pacman.conf
@@ -30,11 +30,11 @@ Architecture = auto
 
 # Misc options
 #UseSyslog
-#Color
+Color
 #NoProgressBar
 CheckSpace
 #VerbosePkgLists
-#ParallelDownloads = 5
+ParallelDownloads = 5
 DownloadUser = alpm
 #DisableSandbox
 
@@ -90,10 +90,6 @@ Include = /etc/pacman.d/mirrorlist
 
 [extra]
 Include = /etc/pacman.d/mirrorlist
-
-[odysen-devtools]
-Server = https://pkg.odysen.space/$repo/os/$arch
-SigLevel = Never
 
 # If you want to run 32 bit applications on your x86_64 system,
 # enable the multilib repositories as required here.
